--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,7 +4,9 @@ imports:
 
 
 pimcore:
-
+    bundles:
+        search_paths:
+            - bundles/AppBundle
 # IMPORTANT Notice!
 # Following there are only some examples listed, for a full list of possible options, please run the following command:
 # ./bin/console debug:config pimcore
