--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,13 @@
   },
   "prefer-stable": true,
   "require": {
-    "pimcore/pimcore": "^11.0",
+    "doctrine/orm": "*",
     "pimcore/admin-ui-classic-bundle": "^1.0",
-    "symfony/runtime": "^6.2",
-    "symfony/dotenv": "^6.2"
+    "pimcore/bundle-generator": "^2.0",
+    "pimcore/pimcore": "^11.0",
+    "symfony/dotenv": "^6.2",
+    "symfony/form": "^6.3",
+    "symfony/runtime": "^6.2"
   },
   "require-dev": {
     "codeception/codeception": "^5.0.3",
@@ -27,7 +30,9 @@
   "autoload": {
     "psr-4": {
       "App\\": "src/",
-      "Pimcore\\Model\\DataObject\\": "var/classes/DataObject"
+      "Pimcore\\Model\\DataObject\\": "var/classes/DataObject",
+      "AppBundle\\": "bundles/AppBundle"
+
     }
   },
   "autoload-dev": {
@@ -35,6 +40,8 @@
       "App\\Tests\\": "tests/"
     }
   },
+
+
   "scripts": {
     "post-create-project-cmd": "Pimcore\\Composer::postCreateProject",
     "post-install-cmd": [
